--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -8,20 +8,20 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="{{pathFor 'home'}}">CAH - SK v0.1.1</a>
+        <a class="navbar-brand" href="{{pathFor 'home'}}">CAH - SK v0.2.0</a>
       </div>
       
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
           {{#if currentUser}}<li><a href="{{pathFor 'gamesNew'}}">Neues Spiel</a></li>{{/if}}        
+          {{#if currentUser}}
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dev <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li class="dropdown-header">Karten</li>
-              {{#if currentUser}}<li><a href="{{pathFor 'cardsNew'}}">Neue Karte</a></li>{{/if}}
-              {{#if currentUser}}<li><a href="{{pathFor 'cardsList'}}">Alle Karten</a></li>{{/if}}
             </ul>
           </li>
+          {{/if}}
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li><a href="{{pathFor 'roadmap'}}">Roadmap</a></li>
