--- a/client/templates/games/games_list.html
+++ b/client/templates/games/games_list.html
@@ -19,8 +19,8 @@
             <small>
               <strong>Max. Punkte:</strong> {{scoreMax}}<br>
               <strong>Spieler ({{playersIn}}/{{playersMax}}):</strong> {{playerList}} <br>
-              <strong>Zuschauer ({{spectatorsIn}}/{{spectatorsMax}}):</strong> {{spectatorsList}} <br>              
-              <strong>Kartendecks:</strong> {{decksList}}<br>
+              <strong>Zuschauer ({{spectatorsIn}}/{{spectatorsMax}}):</strong> {{spectatorList}} <br>              
+              <strong>Kartendecks:</strong> {{decks}}<br>
               {{passDebug}} / {{_id}} / {{playerID}}                    
             </small>
           </div>
