--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -8,7 +8,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="{{pathFor 'home'}}">CAH - SK v0.2.0</a>
+        <a class="navbar-brand" href="{{pathFor 'home'}}">CAH - SK {{> version }}</a>
       </div>
       
       <div class="navbar-collapse collapse">
