--- a/client/templates/games/game.html
+++ b/client/templates/games/game.html
@@ -1,10 +1,10 @@
 <template name="gameSingle">
-  {{#if checkPassword}}
+  {{#if checkPassword}}   
     {{> gameSingleModal}}
     {{> gameSingleItem}}
   {{else}}
     {{> gameSingleItem}}
-  {{/if}}  
+  {{/if}}
   <div class="spacer-20"></div>
   <div class="panel panel-danger">
     <div class="panel-heading"> 
@@ -54,7 +54,7 @@
 
 <template name="gameSingleModal">
   <!-- Modal -->
-    <div class="modal fade" id="passModal_{{_id}}" tabindex="-1" role="dialog" aria-labelledby="passModal" aria-hidden="false">
+    <div class="modal fade in show" id="passModal_{{_id}}" tabindex="-1" role="dialog" aria-labelledby="passModal" aria-hidden="true">
       <div class="modal-dialog modal-sm">
         <div class="modal-content">
           <div class="modal-body">
