--- a/client/templates/games/game.html
+++ b/client/templates/games/game.html
@@ -81,7 +81,8 @@
 <template name="gameSinglePlayerlist">
   <div class="panel panel-default">
     <div class="panel-body">
-    Playerlist (soon...)
+      <h3>Spielerliste</h3>
+      {{{players}}}
     </div>
   </div> 
 </template>
