--- a/client/templates/games/game.html
+++ b/client/templates/games/game.html
@@ -80,8 +80,10 @@
 
 <template name="gameSinglePlayerlist">
   <div class="panel panel-default">
+    <div class="panel-heading">
+      Spielerliste
+    </div>
     <div class="panel-body">
-      <h3>Spielerliste</h3>
       {{{players}}}
     </div>
   </div> 
@@ -89,8 +91,11 @@
 
 <template name="gameSingleEdit">
   <div class="panel panel-default">
+    <div class="panel-heading">
+      Spiel {{gameTitle}} bearbeiten
+    </div>
     <div class="panel-body">
-      <form class="form-horizontal" role="form">     
+      <form class="form-horizontal" role="form">    
         <div class="form-group">
           <label for="gameTitle" class="col-sm-3 control-label">Spielname</label>
           <div class="col-sm-9">
@@ -99,46 +104,23 @@
         </div>        
         <div class="form-group">
           <label for="scoreMax" class="col-sm-3 control-label">Max. Score</label>
-          <div class="col-sm-2">
-            <select class="form-control" name="scoreMax" id="scoreMax" value="{{scoreMax}}">
-              <option value="4">4</option>
-              <option value="8">8</option>
-              <option value="12">12</option>
-              <option value="16">16</option>
-              <option value="20">20</option>
+          <div class="col-sm-3">
+            <select class="form-control" name="scoreMax" id="scoreMax">
+              {{> selectScoreMax}}
             </select>
           </div>
-        </div>
-        
+        </div>        
         <div class="form-group">
           <label for="playersMax" class="col-sm-3 control-label">Max. Spieler</label>
-          <div class="col-sm-2">
+          <div class="col-sm-3">
             <select class="form-control" name="playersMax" id="playersMax">
-              <option>3</option>
-              <option>4</option>
-              <option>5</option>
-              <option>6</option>
-              <option>7</option>
-              <option>8</option>
-              <option>9</option>
-              <option>10</option>
-              <option>11</option>
-              <option>12</option>
-              <option>13</option>
-              <option>14</option>
-              <option>15</option>
-              <option>16</option>
-              <option>17</option>
-              <option>18</option>
-              <option>19</option>
-              <option>20</option>
+              {{> selectPlayersMax}}
             </select>
           </div>
-        </div>
-    
+        </div>   
         <div class="form-group">
           <label for="spectatorsMax" class="col-sm-3 control-label">Max. Zuschauer</label>
-          <div class="col-sm-2">
+          <div class="col-sm-3">
             <select class="form-control" name="spectatorsMax" id="spectatorsMax">
               <option>0</option>
               <option>1</option>
@@ -148,23 +130,21 @@
               <option>5</option>
             </select>
           </div>
-        </div>
-        
+        </div>       
         <div class="form-group">
           <label class="col-sm-3 control-label">Decks</label>
           <div class="col-sm-9">
             {{#each decks}}
               <label for="deck_{{_id}}" class="checkbox inline">
-                <input id="deck_{{_id}}" type="checkbox" value="{{_id}}" name="decks" /> {{deckText}}
+                <input id="deck_{{_id}}" type="checkbox" value="{{deckText}}" name="decks" /> {{deckText}}
               </label>
             {{/each}}
           </div>
-        </div>
-        
+        </div>        
         <div class="form-group">
           <label for="gamePass" class="col-sm-3 control-label">Passwort</label>        
           <div class="col-sm-6">
-            <input type="password" class="form-control" id="gamePass" name="gamePass" value="" placeholder="Game password">
+            <input type="password" class="form-control" id="gamePass" name="gamePass" value="{{gamePass}}" placeholder="Game password">
           </div>
           <div class="col-sm-3">
             <label for="showPassword" class="checkbox-inline">
