--- a/client/templates/games/game_selects.html
+++ b/client/templates/games/game_selects.html
@@ -7,5 +7,9 @@
 </template>
 
 <template name="selectSpectatorsMax">
-  selectSpectatorsMax
+  {{{spectatorsMaxSel}}}
+</template>
+
+<template name="checkDecks">
+  {{{decksSel}}}
 </template>
