--- a/client/templates/games/game.html
+++ b/client/templates/games/game.html
@@ -170,7 +170,7 @@
 <template name="gameSingleChat">
   <div class="panel panel-default">
     <div class="panel-body">
-    Chat
+     {{> chatSingle }}
     </div>
   </div>      
 </template>
