--- a/client/style.css
+++ b/client/style.css
@@ -104,3 +104,8 @@ body {
   color: rgba(200,200,200,0.8);
   padding: 5px 15px;
 }
+
+.chatBox .well {
+  max-height: 200px;
+  overflow: scroll;
+}
