--- a/client/templates/games/game.html
+++ b/client/templates/games/game.html
@@ -146,7 +146,7 @@
     
         <div class="control-group">
           <div class="controls">
-            <input type="submit" value="Erstellen" class="btn btn-primary"/>
+            <input type="submit" value="Aktualisieren" class="btn btn-default"/>
           </div>
         </div>
       </form>
