--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -19,6 +19,11 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dev <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
               <li class="dropdown-header">Karten</li>
+              <li><a href="{{pathFor 'cardsNew'}}">Neue Karte</a></li>
+              <li><a href="{{pathFor 'cardsList'}}">Alle Karten</a></li>
+              <li class="dropdown-header">Decks</li>
+              <li><a href="{{pathFor 'decksNew'}}">Neues Deck</a></li>
+              <li><a href="{{pathFor 'decksList'}}">Alle Decks</a></li>
             </ul>
           </li>
           {{/if}}
