--- a/client/templates/decks/deck_new.html
+++ b/client/templates/decks/deck_new.html
@@ -1,6 +1,17 @@
 <template name="decksNew">
   <div class="box col-sm-6">
     <form class="form-horizontal" role="form">
+      <div class="form-group">
+        <label for="deckTitle" class="col-sm-3 control-label">Deck Name</label>
+        <div class="col-sm-9">
+          <input type="text" class="form-control" id="deckTitle" name="deckTitle" value="" placeholder="">
+        </div>
+      </div>
+      <div class="control-group">
+        <div class="controls">
+          <input type="submit" value="Erstellen" class="btn btn-default"/>
+        </div>
+      </div>
     </form>
   </div>
 </template>
