--- a/client/templates/decks/decks_list.html
+++ b/client/templates/decks/decks_list.html
@@ -9,11 +9,10 @@
 </template>
 
 <template name="deckItem">
-    <div class="col-sm-6"> 
+    <div class="col-sm-3"> 
       <div class="panel panel-default">
-        <div class="panel-heading"> 
-        </div>
         <div class="panel-body">
+          {{deckTitle}} <span class="badge pull-right">{{cardsProDeck}}</span>
         </div>
       </div>
     </div>        
