--- a/client/templates/games/game.html
+++ b/client/templates/games/game.html
@@ -106,7 +106,7 @@
           <label for="scoreMax" class="col-sm-3 control-label">Max. Score</label>
           <div class="col-sm-3">
             <select class="form-control" name="scoreMax" id="scoreMax">
-              {{> selectScoreMax}}
+              {{> editScoreMax}}
             </select>
           </div>
         </div>        
@@ -114,7 +114,7 @@
           <label for="playersMax" class="col-sm-3 control-label">Max. Spieler</label>
           <div class="col-sm-3">
             <select class="form-control" name="playersMax" id="playersMax">
-              {{> selectPlayersMax}}
+              {{> editPlayersMax}}
             </select>
           </div>
         </div>   
@@ -122,14 +122,14 @@
           <label for="spectatorsMax" class="col-sm-3 control-label">Max. Zuschauer</label>
           <div class="col-sm-3">
             <select class="form-control" name="spectatorsMax" id="spectatorsMax">
-              {{> selectSpectatorsMax}}
+              {{> editSpectatorsMax}}
             </select>
           </div>
         </div>       
         <div class="form-group">
           <label class="col-sm-3 control-label">Decks</label>
           <div class="col-sm-9">
-            {{> checkDecks}}
+            {{> editDecks}}
           </div>
         </div>        
         <div class="form-group">
