--- a/client/templates/cards/cards_list.html
+++ b/client/templates/cards/cards_list.html
@@ -1,19 +1,33 @@
 <template name="cardsList">
   <div class="cards">
     <div class="row">
-    {{#each cards}}
-      {{> cardItem}}
-    {{/each}}
+      {{#each cardsBlack}}
+        {{> cardItemBlack}}
+      {{/each}}
+    </div>
+    <div class="row">
+      {{#each cardsWhite}}
+        {{> cardItemWhite}}
+      {{/each}}
     </div>
   </div>
 </template>
 
-<template name="cardItem">
-    <div class="col-sm-6"> 
-      <div class="panel panel-default">
-        <div class="panel-heading"> 
-        </div>
+<template name="cardItemBlack">
+    <div class="col-sm-3"> 
+      <div class="panel panel-card panel-black">
         <div class="panel-body">
+          {{cardText}}
+        </div>
+      </div>
+    </div>        
+</template>
+
+<template name="cardItemWhite">
+    <div class="col-sm-3"> 
+      <div class="panel panel-card panel-default">
+        <div class="panel-body">
+          {{cardText}}
         </div>
       </div>
     </div>        
