--- a/client/templates/includes/errors.html
+++ b/client/templates/includes/errors.html
@@ -12,3 +12,18 @@
     {{message}}
   </div>
 </template>
+
+<template name="infos">
+  <div class="errors">
+    {{#each infos}}
+      {{> info}}
+    {{/each}}
+  </div>
+</template>
+
+<template name="info">
+  <div class="alert alert-info" role="alert">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    {{message}}
+  </div>
+</template>
