--- a/client/style.css
+++ b/client/style.css
@@ -76,6 +76,24 @@ body {
   font-size: 0.3em;
 }
 
+.panel-card .panel-body {
+  position: relative;
+  z-index : 1;
+  height: 280px;
+}
+
+.panel-card .panel-footer {
+  position: relative;
+  bottom: 5px;
+  z-index : 2;
+  color: rgba(0,0,0,1);
+  padding: 0 5px;
+  font-weight: normal;
+  margin: 0;
+  font-size: 0.3em;
+  min-height: 24px;
+}
+
 .panel-black {
   background-color: rgba(0,0,0,1);
   color: rgba(255,255,255,1);
