--- a/client/templates/application/layout.html
+++ b/client/templates/application/layout.html
@@ -1,6 +1,7 @@
 <template name="layout">
   {{> header}}
   {{> errors}}
+  {{> infos}}
   <div class="container">
     <div id="main" class="row-fluid">
       {{> yield}}
