--- a/client/templates/games/game.html
+++ b/client/templates/games/game.html
@@ -171,7 +171,7 @@
           <label for="scoreMax" class="col-sm-3 control-label">Max. Score</label>
           <div class="col-sm-3">
             <select class="form-control" name="scoreMax" id="scoreMax" disabled>
-              {{> selectScoreMax}}
+              {{> editScoreMax}}
             </select>
           </div>
         </div>        
@@ -179,7 +179,7 @@
           <label for="playersMax" class="col-sm-3 control-label">Max. Spieler</label>
           <div class="col-sm-3">
             <select class="form-control" name="playersMax" id="playersMax" disabled>
-              {{> selectPlayersMax}}
+              {{> editPlayersMax}}
             </select>
           </div>
         </div>   
@@ -187,14 +187,14 @@
           <label for="spectatorsMax" class="col-sm-3 control-label">Max. Zuschauer</label>
           <div class="col-sm-3">
             <select class="form-control" name="spectatorsMax" id="spectatorsMax" disabled>
-              {{> selectSpectatorsMax}}
+              {{> editSpectatorsMax}}
             </select>
           </div>
         </div>       
         <div class="form-group">
           <label class="col-sm-3 control-label">Decks</label>
           <div class="col-sm-9">
-            {{> checkDecks}}
+            {{> editDecks}}
           </div>
         </div>        
         <div class="form-group">
