--- a/client/templates/cards/cards_list.html
+++ b/client/templates/cards/cards_list.html
@@ -19,6 +19,10 @@
         <div class="panel-body">
           {{cardText}}
         </div>
+        <div class="panel-footer">
+          <span class="glyphicon glyphicon-circle-arrow-right"></span> {{cardDeck}} 
+          <span class="badge pull-right">{{checkWhite}}</span>
+        </div>
       </div>
     </div>        
 </template>
@@ -28,6 +32,9 @@
       <div class="panel panel-card panel-default">
         <div class="panel-body">
           {{cardText}}
+        </div>
+        <div class="panel-footer">
+          <span class="glyphicon glyphicon-circle-arrow-right"></span> {{cardDeck}}
         </div>
       </div>
     </div>        
