--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -23,7 +23,7 @@
             </ul>
           </li>
           {{/if}}        
-          {{#if currentUser}}
+          {{#if checkAdmin}}
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dev <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
