--- a/client/templates/dev/roadmap.html
+++ b/client/templates/dev/roadmap.html
@@ -3,30 +3,54 @@
     <div class="row">
       <div class="col-sm-6">
         <h2>in Progress</h2>
+        <p> aktuelles Changelog unter: <a href="https://github.com/skeltoras/cahSK" target="_blank">github - cahSK</a></p>
+        <!-- panel -->
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title">Version 0.5 - Alpha</h3>
+          </div>
+          <div class="panel-body">
+            <div class="list-group">
+              <a href="#" class="list-group-item">
+                <h4 class="list-group-item-heading">Seite: Laufendes Spiel</h4>
+              </a>
+              <a href="#" class="list-group-item">
+                <h4 class="list-group-item-heading">Funktionen: Karten & Decks</h4>
+              </a>
+            </div>
+            <div class="progress">
+              <div class="progress-bar progress-bar-info progress-bar-striped active"  role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width: 10%">
+                <span class="sr-only">10% in Progress</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- end panel -->
+        <!-- panel -->
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title">Version 0.4</h3>
+          </div>
+          <div class="panel-body">
+            All done!
+            <div class="progress">
+              <div class="progress-bar progress-bar-success progress-bar-striped"  role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+                <span class="sr-only">100% All Done</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- end panel -->
         <!-- panel -->
         <div class="panel panel-default">
           <div class="panel-heading">
             <h3 class="panel-title">Version 0.3</h3>
           </div>
           <div class="panel-body">
-            <div class="list-group">
-              <a href="#" class="list-group-item">
-                <h4 class="list-group-item-heading">Seite: Übersicht Spiele</h4>
-                <p class="list-group-item-text">Auflistung aller zur Zeit laufenden Spiele</p>
-                <p class="list-group-item-text">Möglichkeit Spiele zu betreten</p>
-              </a>
-              <a href="#" class="list-group-item">
-                <h4 class="list-group-item-heading">Seite: Einzelspiel</h4>
-                <p class="list-group-item-text">Infos zum Spiel</p>
-                <p class="list-group-item-text">Editiermöglichkeit der Einstellungen</p>
-                <p class="list-group-item-text">Möglichkeit Spiel zu starten und zu verlassen</p>
-                <p class="list-group-item-text">Liste der Spieler</p>
-                <p class="list-group-item-text">Chat für Spieler in diesem Spiel</p>
-              </a>
-            </div>
+            All done!
             <div class="progress">
-              <div class="progress-bar progress-bar-info progress-bar-striped active"  role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-                <span class="sr-only">40% in Progress</span>
+              <div class="progress-bar progress-bar-success progress-bar-striped"  role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+                <span class="sr-only">100% All Done</span>
               </div>
             </div>
           </div>
@@ -68,28 +92,23 @@
         <!-- panel -->
         <div class="panel panel-default">
           <div class="panel-heading">
-            <h3 class="panel-title">Version 0.4 - Alpha</h3>
+            <h3 class="panel-title">Version 0.5 - Alpha</h3>
           </div>
           <div class="panel-body">
             <div class="list-group">
               <a href="#" class="list-group-item">
-                <h4 class="list-group-item-heading">Funktion: Karten</h4>
-                <p class="list-group-item-text">Neue Karten erstellen</p>
-                <p class="list-group-item-text">Karten anzeigen</p>
-                <p class="list-group-item-text">Karten Deck zuordnen</p>
+                <h4 class="list-group-item-heading">Funktion: Spiele</h4>
+                <p class="list-group-item-text">Inaktive Spiele nach einer bestimmten Zeit löschen</p>
+                <p class="list-group-item-text">laufendes Spiel pausieren</p>
+                <p class="list-group-item-text">laufendes Spiel beenden</p>
+                <p class="list-group-item-text">Eigenes Spiel löschen</p>
+                <p class="list-group-item-text">Fertige Spiele löschen öder archivieren?</p>
+                <p class="list-group-item-text">Übersichts-Seite für fertige Spiele?</p>
+                <p class="list-group-item-text">Hitliste: Spieler / Gewinne?</p>
               </a>
               <a href="#" class="list-group-item">
-                <h4 class="list-group-item-heading">Funktion: Decks</h4>
-                <p class="list-group-item-text">Neue Decks erstellen</p>
-                <p class="list-group-item-text">Decks anzeigen</p>
-              </a>
-              <a href="#" class="list-group-item">
-                <h4 class="list-group-item-heading">Seite: Einzelspiel laufend</h4>
-                <p class="list-group-item-text">Aktuelles Deck: Schwarze Karten</p>
-                <p class="list-group-item-text">Aktuelle Hand je Spieler: Weiße Karten</p>
-                <p class="list-group-item-text">Chat</p>
-                <p class="list-group-item-text">Karten-Zar</p>
-                <p class="list-group-item-text">Auswahl</p>
+                <h4 class="list-group-item-heading">Funktion: Startseite</h4>
+                <p class="list-group-item-text">Aufteilung nach offen und laufend?</p>
               </a>
             </div>
             <div class="progress">
