--- a/client/templates/games/game.html
+++ b/client/templates/games/game.html
@@ -5,15 +5,6 @@
   {{else}}
     {{> gameSingleItem}}
   {{/if}}
-  <div class="spacer-20"></div>
-  <div class="panel panel-danger">
-    <div class="panel-heading"> 
-      Debug:
-    </div>
-    <div class="panel-body">
-      {{debug}} 
-    </div>
-  </div> 
 </template>
 
 <template name="gameSingleItem">
@@ -92,7 +83,7 @@
 <template name="gameSingleEdit">
   <div class="panel panel-default">
     <div class="panel-heading">
-      Spiel {{gameTitle}} bearbeiten
+      Spiel <i>{{gameTitle}} </i>bearbeiten
     </div>
     <div class="panel-body">
       <form class="form-horizontal" role="form">    
@@ -157,7 +148,7 @@
 <template name="gameSingleShow">
   <div class="panel panel-default">
     <div class="panel-heading">
-      Spiel {{gameTitle}}: Einstellungen
+      Spiel <i>{{gameTitle}}: </i>Einstellungen
     </div>
     <div class="panel-body">
       <form class="form-horizontal" role="form">    
