--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -13,29 +13,31 @@
       
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-          {{#if currentUser}}<li><a href="{{pathFor 'gamesNew'}}">Neues Spiel</a></li>{{/if}}
           {{#if currentUser}}
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Neue Karten einreichen<span class="caret"></span></a>
-            <ul class="dropdown-menu" role="menu">
-              <li><a href="{{pathFor 'addNewWhiteCards'}}">Neue weiße Karte</a></li>
-              <li><a href="{{pathFor 'addNewBlackCards'}}">Neue schwarze Karte</a></li>
-            </ul>
-          </li>
+            <li><a href="{{pathFor 'gamesNew'}}">Neues Spiel</a></li>
+          {{/if}}
+          {{#if currentUser}}
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Neue Karten einreichen<span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="{{pathFor 'addNewWhiteCards'}}">Neue weiße Karte</a></li>
+                <li><a href="{{pathFor 'addNewBlackCards'}}">Neue schwarze Karte</a></li>
+              </ul>
+            </li>
           {{/if}}        
           {{#if checkAdmin}}
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dev <span class="caret"></span></a>
-            <ul class="dropdown-menu" role="menu">
-              <li class="dropdown-header">Karten</li>
-              <li><a href="{{pathFor 'cardsNew'}}">Neue Karte</a></li>
-              <li><a href="{{pathFor 'cardsList'}}">Alle Karten</a></li>
-              <li><a href="{{pathFor 'listNewCards'}}">Karten freigeben</a></li>
-              <li class="dropdown-header">Decks</li>
-              <li><a href="{{pathFor 'decksNew'}}">Neues Deck</a></li>
-              <li><a href="{{pathFor 'decksList'}}">Alle Decks</a></li>
-            </ul>
-          </li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dev <span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+                <li class="dropdown-header">Karten</li>
+                <li><a href="{{pathFor 'cardsNew'}}">Neue Karte</a></li>
+                <li><a href="{{pathFor 'cardsList'}}">Alle Karten</a></li>
+                <li><a href="{{pathFor 'listNewCards'}}">Karten freigeben</a></li>
+                <li class="dropdown-header">Decks</li>
+                <li><a href="{{pathFor 'decksNew'}}">Neues Deck</a></li>
+                <li><a href="{{pathFor 'decksList'}}">Alle Decks</a></li>
+              </ul>
+            </li>
           {{/if}}
         </ul>
         <ul class="nav navbar-nav navbar-right">
